syntax = "proto3";

package handshake;

option go_package = "pb";

message Syn {
  bytes ObservedUnderlay = 1;
}

message Ack {
  Address Address = 1;
  uint64 NetworkID = 2;
  bytes NodeMode = 3;
  string WelcomeMessage = 99;
}

message SynAck {
  Syn Syn = 1;
  Ack Ack = 2;
}

message Address {
  bytes Underlay = 1;
  bytes PublicKey = 2;
  bytes Signature = 3;
  bytes Overlay = 4;
}
